# githubctl

./: pyproject.toml
githubctl/: github.py  main.py  options.py  utils.py
